wxc/include/ewxw/wxc_glue.h



/* wxCaret */
TClassDef(wxCaret)
TClass(wxCaret) wxCaret_Create( TClass(wxWindow) _wnd, int _wth, int _hgt );

int        wxCaret_GetBlinkTime(  );

void       wxCaret_GetPosition( TSelf(wxCaret) _obj, TPointOutVoid(_x,_y) );

void       wxCaret_GetSize( TSelf(wxCaret) _obj, TSizeOutVoid(_w,_h) );

TClass(wxWindow) wxCaret_GetWindow( TSelf(wxCaret) _obj );

void       wxCaret_Hide( TSelf(wxCaret) _obj );

TBool      wxCaret_IsOk( TSelf(wxCaret) _obj );

TBool      wxCaret_IsVisible( TSelf(wxCaret) _obj );

void       wxCaret_Move( TSelf(wxCaret) _obj, TPoint(x,y) );

void       wxCaret_SetBlinkTime( int milliseconds );

void       wxCaret_SetSize( TSelf(wxCaret) _obj, TSize(width,height) );

void       wxCaret_Show( TSelf(wxCaret) _obj );